// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildList allows child counts to be toggled on 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Hide Child Counts
  </button>,
  <ul
    className="childlist"
  >
    <li>
      Child
    </li>
  </ul>,
]
`;

exports[`ChildList allows models to be toggled on 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Hide Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Child Counts
  </button>,
  <ul
    className="childlist"
  >
    <li>
      Child
    </li>
  </ul>,
]
`;

exports[`ChildList allows thumbnails to be toggled on 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Hide Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Child Counts
  </button>,
  <ul
    className="childlist"
  >
    <li>
      Child
    </li>
  </ul>,
]
`;

exports[`ChildList displays a paginator when appropriate 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Child Counts
  </button>,
  <p>
    Showing 
    1
     - 
    10
     of
     
    10000
  </p>,
  "Pagination",
  <ul
    className="childlist"
  >
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
  </ul>,
]
`;

exports[`ChildList renders using SelectableChild when a callback is provided 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Child Counts
  </button>,
  <ul
    className="childlist"
  >
    <li>
      SelectableChild
    </li>
  </ul>,
]
`;

exports[`ChildList renders using ajax-loaded object data 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Child Counts
  </button>,
  <ul
    className="childlist"
  >
    <li>
      Child
    </li>
  </ul>,
]
`;

exports[`ChildList renders using ajax-loaded root data 1`] = `
[
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Thumbnails
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Models
  </button>,
  <button
    onClick={[Function]}
    style={
      {
        "float": "right",
        "marginTop": "-2em",
      }
    }
  >
    Show Child Counts
  </button>,
  <ul
    className="childlist"
  >
    <li>
      Child
    </li>
  </ul>,
]
`;
